buttons function handled

--- a/www/index.html
+++ b/www/index.html
@@ -43,20 +43,21 @@
       <ion-content>
  <div class="col-lg-4 col-lg-offset-4" style="padding: 0">
        <div class="col-lg-12" style="height: 225px;background: #000;color: #fff;" >
- 
+        <input type="text"   class="form-control textresult" ng-model="result" style="  height: 100px; background-color: #000;position: absolute; bottom:0px;box-shadow: none;text-shadow: none;color:#ffff;font-size: 30px;
+" disabled>
        </div>
 
-           <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3  no-padding buttons" style="">
+           <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3  no-padding buttons" style="" ng-click=buttonTouched(7) >
           7
            </div>
 
 
-            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="">
+            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="" ng-click=buttonTouched(8)>
           8
            </div>
 
 
-            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="">
+            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="" ng-click=buttonTouched(9)>
           9
            </div>
 
@@ -66,31 +67,31 @@
            </div>
 
 
-            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="">
+            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="" ng-click=buttonTouched(4)>
           4
            </div>
 
 
-            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="">
+            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="" ng-click=buttonTouched(5)>
           5
            </div>
 
 
-            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="">
+            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="" ng-click=buttonTouched(6)>
           6
            </div>
 
-            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="background-color:  #ff9500">
+            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="background-color:  #ff9500" >
           *
            </div>
 
-            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="">
+            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="" ng-click=buttonTouched(1)>
           1
            </div>
-            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="">
+            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="" ng-click=buttonTouched(2)>
           2
            </div>
-            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="">
+            <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 buttons" style="" ng-click=buttonTouched(3)>
           3
            </div>
 
@@ -103,7 +104,7 @@
           .
            </div>
 
-             <div class="col-lg-6 col-xs-6  col-sm-3 col-md-3 buttons" style="">
+             <div class="col-lg-6 col-xs-6  col-sm-3 col-md-3 buttons" style="" ng-click=buttonTouched(0)>
           0
            </div>
 
